--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			<h2 id="clock">00:00:00</h2>
 			<form id="todo-form">
 				<input type="text" placeholder="새로운 일정을 입력하세요" required/>
+				<button>🥊</button>
 			</form>
 			<ul id="todo-list"></ul>
 			<div id="tips">
