--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 				<i class="fa-brands fa-github"></i>
 				<i class="fa-solid fa-file-circle-plus"></i>
 			</ul>
-			<a href="#" class="navbar_toogle">🔽</a>
+			<a href="#" class="navbar_toogle"><i class="fa-solid fa-align-justify"></i></a>
 		</header>
 		<div class="content">
 			<h2 id="clock">00:00:00</h2>
 			<form id="todo-form">
 				<input type="text" placeholder="새로운 일정을 입력하세요" required/>
-				<button>🥊</button>
+				<button><i class="fa-solid fa-o"></i></button>
 			</form>
 			<ul id="todo-list"></ul>
 			<div id="tips">
