--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 		<div class="content">
 			<h2 id="clock">00:00:00</h2>
 			<form id="todo-form">
-				<input type="text" placeholder="새로운 일정을 입력하세요" required/>
+				<input type="text" maxlength="23" placeholder="새로운 일정을 입력하세요" required/>
 				<button><i class="fa-solid fa-o"></i></button>
 			</form>
 			<ul id="todo-list"></ul>
-			<div id="tips">
-				<li></li>
-				<li></li>
-			</div>
+		</div>
+		<div id="tips">
+			<li></li>
+			<li></li>
 		</div>
 		<script src="JS/main.js"></script>
 		<script src="JS/clock.js"></script>
