--- a/index.html
+++ b/index.html
@@ -25,18 +25,32 @@
 				<li><a href="#">FAQ</a></li>
 			</ul>
 			<ul class="navbar_icons">
-				<i class="fa-brands fa-github"></i>
-				<i class="fa-solid fa-file-circle-plus"></i>
+				<a href="https://github.com/PhiloMonx1/MobMob" target='_blank'>
+					<i class="fa-brands fa-github"></i>
+				</a>
+				<a href="#">
+					<i class="fa-solid fa-share-nodes"></i>
+				</a>
+				
 			</ul>
-			<a href="#" class="navbar_toogle"><i class="fa-solid fa-align-justify"></i></a>
+			<a href="#" class="navbar_toogle"
+				><i class="fa-solid fa-align-justify"></i
+			></a>
 		</header>
 		<div class="content">
 			<h2 id="clock">00:00:00</h2>
 			<form id="todo-form">
-				<input type="text" maxlength="20" placeholder="새로운 일정을 입력하세요" required/>
+				<input
+					type="text"
+					maxlength="20"
+					placeholder="새로운 일정을 입력하세요"
+					required
+				/>
 				<!-- <button><i class="fa-solid fa-o"></i></button> -->
 			</form>
-			<ul id="todo-list"></ul>
+			<ul id="todo-list">
+				<i class="fa-brands fa-bootstrap super-delete"></i>
+			</ul>
 		</div>
 		<div id="tips">
 			<li></li>
