--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				/>
 			</form>
 			<ul id="todo-list">
-				<i class="fa-brands fa-bootstrap super-delete"></i>
+				<i class="fa-solid fa-check-to-slot super-delete"></i>
 			</ul>
 		</nav>
 		<div id="tips">
