--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				/>
 			</form>
 			<ul id="todo-list">
-				<i class="fa-solid fa-check-to-slot super-delete">현재 포인트 : 0점</i>
+				<i class="fa-solid fa-check-to-slot super-delete" style="padding-bottom: 10px;">현재 포인트 : 0점</i>
 			</ul>
 		</nav>
 		<div id="tips">
