--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<header class="navbar">
 			<div class="navbar_logo">
 				<i class="fa-solid fa-compass-drafting"></i>
-				<a href="#">MobMob</a>
+				<a href="https://mobmob.netlify.app/">MobMob</a>
 			</div>
 			<ul class="navbar_menu">
 				<li><a href="#">Home</a></li>
