--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<ul class="navbar_menu">
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Information</a></li>
-				<li><a href="#">Gallery</a></li>
-				<li><a href="#">Review</a></li>
+				<li><a href="#">Shop</a></li>
+				<li><a href="#">Collection</a></li>
 				<li><a href="#">FAQ</a></li>
 			</ul>
 			<ul class="navbar_icons">
